[project]
name = "growbox"
description = "Python interfaces for CNC Growbox"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.0.1"
authors = [
    { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
license = { file = "LICENSE.txt" }
maintainers = [
   { name = "Polyakov Konstantin", email = "shyzik93@mail.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyserial == 3.5",
    "pyqt6 == 6.7.0",
    "pyyaml == 6.0.1",
    "requests == 2.31.0",
]

[project.gui-scripts]
growbox = "growbox.gui:run"

[build-system]
requires = ["setuptools", "wheel"]
